ghc-6.2/hslibs/win32/Win32Clip_stub_ffi.h

#include <windows.h>
#include "errors.h"
#include "win32debug.h"
#include "finalizers.h"
#include "HsFFI.h"
extern UINT prim_cF_BITMAP();
extern UINT prim_cF_DIB();
extern UINT prim_cF_DIF();
extern UINT prim_cF_DSPBITMAP();
extern UINT prim_cF_DSPENHMETAFILE();
extern UINT prim_cF_DSPMETAFILEPICT();
extern UINT prim_cF_DSPTEXT();
extern UINT prim_cF_ENHMETAFILE();
extern UINT prim_cF_GDIOBJFIRST();
extern UINT prim_cF_HDROP();
extern UINT prim_cF_LOCALE();
extern UINT prim_cF_METAFILEPICT();
extern UINT prim_cF_OEMTEXT();
extern UINT prim_cF_OWNERDISPLAY();
extern UINT prim_cF_PALETTE();
extern UINT prim_cF_PENDATA();
extern UINT prim_cF_PRIVATEFIRST();
extern UINT prim_cF_PRIVATELAST();
extern UINT prim_cF_RIFF();
extern UINT prim_cF_SYLK();
extern UINT prim_cF_TEXT();
extern UINT prim_cF_WAVE();
extern UINT prim_cF_TIFF();
extern int prim_changeClipboardChain(HWND arg1,HWND arg2);
extern void* prim_closeClipboard();
extern int access_prim_closeClipboard_gc_failed(HsPtr);
extern void* access_prim_closeClipboard_gc_failstring(HsPtr);
extern int prim_countClipboardFormats();
extern void* prim_emptyClipboard();
extern int access_prim_emptyClipboard_gc_failed(HsPtr);
extern void* access_prim_emptyClipboard_gc_failstring(HsPtr);
extern void* prim_enumClipboardFormats(UINT arg1);
extern UINT access_prim_enumClipboardFormats_res1(HsPtr);
extern int access_prim_enumClipboardFormats_gc_failed(HsPtr);
extern void* access_prim_enumClipboardFormats_gc_failstring(HsPtr);
extern void* prim_getClipboardData(UINT arg1);
extern HANDLE access_prim_getClipboardData_res1(HsPtr);
extern int access_prim_getClipboardData_gc_failed(HsPtr);
extern void* access_prim_getClipboardData_gc_failstring(HsPtr);
extern void* prim_getClipboardFormatName(UINT arg1,void * arg2,int arg3);
extern int access_prim_getClipboardFormatName_res1(HsPtr);
extern int access_prim_getClipboardFormatName_gc_failed(HsPtr);
extern void* access_prim_getClipboardFormatName_gc_failstring(HsPtr);
extern void* prim_getClipboardOwner();
extern HWND access_prim_getClipboardOwner_res1(HsPtr);
extern int access_prim_getClipboardOwner_gc_failed(HsPtr);
extern void* access_prim_getClipboardOwner_gc_failstring(HsPtr);
extern void* prim_getClipboardViewer();
extern HWND access_prim_getClipboardViewer_res1(HsPtr);
extern int access_prim_getClipboardViewer_gc_failed(HsPtr);
extern void* access_prim_getClipboardViewer_gc_failstring(HsPtr);
extern void* prim_getOpenClipboardWindow();
extern HWND access_prim_getOpenClipboardWindow_res1(HsPtr);
extern int access_prim_getOpenClipboardWindow_gc_failed(HsPtr);
extern void* access_prim_getOpenClipboardWindow_gc_failstring(HsPtr);
extern void* prim_getPriorityClipboardFormat(void * arg1,int arg2);
extern int access_prim_getPriorityClipboardFormat_res1(HsPtr);
extern int access_prim_getPriorityClipboardFormat_gc_failed(HsPtr);
extern void* access_prim_getPriorityClipboardFormat_gc_failstring(HsPtr);
extern BOOL prim_isClipboardFormatAvailable(UINT arg1);
extern void* prim_openClipboard(HWND arg1);
extern int access_prim_openClipboard_gc_failed(HsPtr);
extern void* access_prim_openClipboard_gc_failstring(HsPtr);
extern void* prim_registerClipboardFormat(char * arg1);
extern UINT access_prim_registerClipboardFormat_res1(HsPtr);
extern int access_prim_registerClipboardFormat_gc_failed(HsPtr);
extern void* access_prim_registerClipboardFormat_gc_failstring(HsPtr);
extern void* prim_setClipboardData(UINT arg1,HANDLE arg2);
extern HANDLE access_prim_setClipboardData_res1(HsPtr);
extern int access_prim_setClipboardData_gc_failed(HsPtr);
extern void* access_prim_setClipboardData_gc_failstring(HsPtr);
extern void* prim_setClipboardViewer(HWND arg1);
extern HWND access_prim_setClipboardViewer_res1(HsPtr);
extern int access_prim_setClipboardViewer_gc_failed(HsPtr);
extern void* access_prim_setClipboardViewer_gc_failstring(HsPtr);